<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/space_20">

    <TextView
        android:id="@+id/tv_title"
        style="@style/HeaderTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/report_reason_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_reasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rb_off_topic"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_off_topic"
            style="@style/Widget.App.RadioButton.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_off_topic"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_abuse"
            style="@style/Widget.App.RadioButton.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_inappropriate"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_hate_speech"
            style="@style/Widget.App.RadioButton.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_hate_speech"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_spam"
            style="@style/Widget.App.RadioButton.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_spam_ad"
            app:useMaterialThemeColors="true" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/space_12"
        android:layout_weight="1"
        android:background="@drawable/bg_radius_5dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/all_cancel"
        android:textColor="@color/black_18"
        android:textSize="@dimen/font_size_large"
        app:backgroundTint="@color/gray_e0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_submit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="@drawable/bg_radius_5dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/all_report_action"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        app:backgroundTint="@color/green_1A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>

