<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_all_radius_16dp"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:text="@string/create_discussion_room_draft_dialog_content"
        android:textColor="@color/gray_4d" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_D9" />

    <TextView
        android:id="@+id/btn_cancel"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:text="@string/create_discussion_room_draft_dialog_cancel"
        android:textColor="@color/red_FF"
        android:textSize="@dimen/font_size_x_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_D9" />

    <TextView
        android:id="@+id/btn_temp_save"
        style="@style/BaseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="@font/pretendard_medium"
        android:gravity="center"
        android:text="@string/create_discussion_room_draft_dialog_save"
        android:textColor="@color/black_18"
        android:textSize="@dimen/font_size_x_large" />
</LinearLayout>