<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.setting.withdraw.WithdrawFragment">

    <TextView
        android:id="@+id/tv_withdraw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_28"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/text_ask_really_withdraw"
        android:textSize="@dimen/font_size_2x_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_withdraw_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:fontFamily="@font/pretendard_semi_bold"
        android:text="@string/text_guide_withdraw_policy"
        android:textColor="@color/gray_9F"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_title" />

    <ImageView
        android:id="@+id/iv_crying_todok"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/space_120"
        android:src="@drawable/img_crying_todok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_policy" />

    <TextView
        android:id="@+id/tv_farewell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_semi_bold"
        android:text="@string/withdraw_farewell"
        android:textColor="@color/gray_9F"
        android:textSize="@dimen/font_size_x_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_crying_todok" />

    <TextView
        android:id="@+id/tv_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_4"
        android:background="@drawable/bg_green_1a_radius_8dp"
        android:fontFamily="@font/pretendard_semi_bold"
        android:gravity="center"
        android:paddingVertical="@dimen/font_size_normal"
        android:text="@string/text_do_withdraw"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_x_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
