<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.auth.signup.SignUpFragment">

    <TextView
        android:id="@+id/tv_header"
        style="@style/HeaderTitleText"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:text="@string/signup_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nickname"
        style="@style/BaseTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_32"
        android:text="@string/all_nickname"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_nickname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_24"
        android:hint="@string/signup_et_hint"
        app:errorIconDrawable="@null"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:cursorColor="@color/black_18"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_green_f0_radius_8dp"
            android:maxLength="8"
            android:maxLines="1"
            android:textColor="@color/black_18" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_create"
        style="@style/BasicButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_btn_height"
        android:layout_marginHorizontal="@dimen/space_20"
        android:layout_marginTop="@dimen/space_24"
        android:layout_marginBottom="@dimen/space_12"
        android:gravity="center"
        android:text="@string/signup_btn_text"
        app:layout_constraintTop_toBottomOf="@id/et_nickname_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.team.todoktodok.presentation.core.component.CloverProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
