<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/discussion_list_menu">

        <include
            layout="@layout/item_toolbar_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_search_discussion_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:hint="@string/discussion_search_bar_hint"
        android:orientation="horizontal"
        app:cursorColor="@color/black_18"
        app:endIconMode="clear_text"
        app:hintTextAppearance="@style/HintTextStyle"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search_discussion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_green_f0_radius_8dp"
            android:fontFamily="@font/pretendard_regular"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textColor="@color/black_18"
            android:textSize="@dimen/font_size_small" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:layout_marginTop="@dimen/space_8"
        android:paddingStart="@dimen/space_20"
        app:tabTextColor="@color/gray_9F"
        app:tabIndicatorColor="@color/green_1A"
        app:tabSelectedTextColor="@color/black_18"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="3dp"
        app:tabMode="scrollable"
        app:layout_constraintTop_toBottomOf="@id/et_search_discussion_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discussion_tab_title_all" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discussion_tab_title_my" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    <ImageView
        android:id="@+id/iv_discussion_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_24"
        android:layout_marginEnd="@dimen/space_12"
        android:background="@drawable/btn_plus_oval"
        android:contentDescription="@string/content_description_navigate_to_book_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
