<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/space_24">

    <ImageView
        android:id="@+id/iv_bottom_sheet_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:src="@drawable/bottom_sheet_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/tv_input_comment"
        app:layout_constraintTop_toBottomOf="@id/iv_bottom_sheet_header"
        tools:listitem="@layout/item_comment" />

    <TextView
        android:id="@+id/tv_input_comment"
        style="@style/HintTextStyle"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_20"
        android:background="@drawable/bg_green_f0_radius_8dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="@dimen/space_4"
        android:paddingBottom="2dp"
        android:text="@string/comment_input_hint"
        android:textSize="@dimen/font_size_x_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_nothing_comments_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/comment_content_description_noting_comment"
            android:src="@drawable/img_mascort_outline" />

        <TextView
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/comment_nothing_comments"
            android:textSize="@dimen/font_size_2x_large" />
    </LinearLayout>

    <com.team.todoktodok.presentation.core.component.CloverProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>